--- a/Serko/Views/Home/About.cshtml
+++ b/Serko/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<p></p>
+<p>Dear Sir / Madam</p>
 
-<p>Use this area to provide additional information.</p>
+<p> I am a South African looking to immigrate to New Zealand. I am married and have 1 child. I enjoy meeting new people, seeing new cultures and realities. I believe New Zealand is a diverse country which would give me the opportunities to enjoy new experiences and improve my skills.</p>
+
+<p>Thanks and Regards</p>
+<p>Zaheer Emam Saib</p>
