--- a/Serko/Views/Home/Contact.cshtml
+++ b/Serko/Views/Home/Contact.cshtml
@@ -1,17 +1,26 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿@section Scripts {
+    <script type="text/javascript" src="~/Scripts/libs/runtime.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/polyfills.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/styles.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/vendor.js"></script>
+    <script type="text/javascript" src="~/Scripts/libs/main.js"></script>
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+@{
+    ViewBag.Title = "Contact Zaheer";
+}
+<h2>Zaheer Emam Saib</h2>
+<h3>My Contact Details</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    312 Canehaven Drive<br />
+    Foresthaven, Phoenix<br />
+    Durban, KZN<br /> 
+    South Africa, 4028 <br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +27 83 776 2236
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong>   <a href="mailto:zaheeremamsaib@gmail.com">zaheeremamsaib@gmail.com</a><br />
 </address>
